k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-backend
  template:
    metadata:
      labels:
        app: go-backend
    spec:
      containers:
      - name: go-backend
        image: rest_with_golang-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: go-backend
spec:
  selector:
    app: go-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
