k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: rest_with_mongo_frntend-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: NodePort
